--- a/edm.html
+++ b/edm.html
@@ -22,7 +22,9 @@
     <span id="player">  </span>
     
      <p id  = "disc" >  </p>
-    
+     <p id = "end" >  </p>
+     <p id = "end2" class ="disc" >  </p>
+ 
    
     <script src=stuff.js> 
 
