--- a/hiphop.html
+++ b/hiphop.html
@@ -19,6 +19,9 @@
     <span id='player'></span>
    
     <p id= "disc" >  </p>
+    <p id = "end" >  </p>
+    <p id = "end2" class ="disc" >  </p>
+
     <input id="discover" type='button' value='Discover ' onclick='discover();' /> 
    <script src=stuff.js> 
    
