--- a/trap.html
+++ b/trap.html
@@ -22,6 +22,7 @@
     <input id="discover" type='button' value='Discover ' onclick='discover();' /> 
     
     <p id = "end" >  </p>
+    <p id = "end2" class ="disc" >  </p>
 
 
    <script src=stuff.js> 
