--- a/rock.html
+++ b/rock.html
@@ -20,6 +20,14 @@
    
     <p id= "disc" >  </p>
     <input id="discover" type='button' value='Discover ' onclick='discover();' /> 
+   
+    <p id = "end" >  </p>
+    <p id = "end2" class ="disc" >  </p>
+
+   
+   
+   
+   
    <script src=stuff.js> 
    
     </script>
