--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
 
 <button class="category" id="trap" onclick="window.location.href = 'trap.html';"  > Trap </button>
 
-<p> Intrustions : You Play The Songs And Guess.   </p>
+<p> Instructions : You Play The Songs And Guess.   </p>
 
 </body>
 </html>
