--- a/start.html
+++ b/start.html
@@ -18,9 +18,9 @@
  <br> <h1 id="koteret" > Registration </h1>  
 
 
-<form> First Name : <input type="text" required> <br> <br>
-    <form> Age : <input type="text">  <br> <br>
-    <form> Nickname : <input type="text">
+<form> Player 1 : <input type="text" required> <br> <br>
+    <form> Player 2 : <input type="text" required>  <br> <br>
+    <form> Player 3 : <input type="text" required>
 
 </form>
  
