--- a/hiphop.html
+++ b/hiphop.html
@@ -15,15 +15,23 @@
     <li><a class="active" href="game.html"> Back</a></li>
 
 
-    <input id="sound" type='button' value='Try To Guess The Song' onclick='playRandomSoundHip();' />
-    <span id='player'></span>
+    <input id="sound" type='button' value='Take A Guess' onclick='playRandomSoundHip();' />
+    <audio id="player" controls autoplay > 
+        <source >  
+    
+    </audio>
    
-    <p id= "disc" >  </p>
+    <p id = "disc" >  </p>
+    <input id="discover" type='button' value='Reveal The Answer ' onclick='discover();' /> 
+    
     <p id = "end" >  </p>
     <p id = "end2" class ="disc" >  </p>
 
-    <input id="discover" type='button' value='Discover ' onclick='discover();' /> 
-   <script src=stuff.js> 
+   
+  
+  
+  
+  <script src=stuff.js> 
    
     </script>
 </body>
