--- a/trap.html
+++ b/trap.html
@@ -24,11 +24,22 @@
     <p id = "disc" >  </p>
     <input id="discover" type='button' value='Reveal The Answer ' onclick='discover();' /> 
     
-<button id=" name1" class="names"> name 1 </button>
-<button id="name2" class="names"> Name 2 </button>
-<button id="name3" class="names"> name 3</button>
-<button id="name4" class="names"> name 4</button>
+<button id=" name1" class="names" onclick='score1();'> name 1 </button>
+<p id ="namek1"  ></p>
 
+
+
+
+<button id="name2" class="names" onclick='score2();'> Name 2 </button>
+<p id ="namek2"  ></p>
+
+
+
+<button id="name3" class="names" onclick='score3();'> name 3</button>
+<p id ="namek3"  ></p>
+
+<button id="name4" class="names"onclick='score4();' > name 4</button>
+<p id ="namek4"  ></p>
 
 
     <p id = "end" >  </p>
